scripts/nullaway/original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8.txt
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
		op1 = null;
		    ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:45: error: [NullAway] assigning @Nullable expression to @NonNull field
		op2 = null;
		    ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:56: error: [NullAway] assigning @Nullable expression to @NonNull field
		op2 = null;
		    ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:35: error: [NullAway] @NonNull field bus not initialized
	AddressSpace bus;
	             ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:36: error: [NullAway] @NonNull field cpu not initialized
	Cpu cpu;
	    ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:45: error: [NullAway] initializer method does not guarantee @NonNull fields memory (line 31), srcHandlers (line 38), dstHandlers (line 39), srcEAHandler (line 40), dstEAHandler (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CpuCore()
	       ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:50: error: [NullAway] assigning @Nullable expression to @NonNull field
		srcEAHandler = null;
		             ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:51: error: [NullAway] assigning @Nullable expression to @NonNull field
		dstEAHandler = null;
		             ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
		memory = null;
		       ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1321: error: [NullAway] @NonNull field CpuCore$DataRegisterOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1406: error: [NullAway] @NonNull field CpuCore$AddressRegisterOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1492: error: [NullAway] @NonNull field CpuCore$AddressRegisterIndirectOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1578: error: [NullAway] @NonNull field CpuCore$AddressRegisterPostIncOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1670: error: [NullAway] @NonNull field CpuCore$AddressRegisterPreDecOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1763: error: [NullAway] @NonNull field CpuCore$AddressRegisterWithDisplacementOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1851: error: [NullAway] @NonNull field CpuCore$AddressRegisterWithIndexOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1855: error: [NullAway] @NonNull field CpuCore$AddressRegisterWithIndexOperand.idxSize not initialized
		protected Size idxSize;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1979: error: [NullAway] @NonNull field CpuCore$AbsoluteShortOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2065: error: [NullAway] @NonNull field CpuCore$AbsoluteLongOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2150: error: [NullAway] @NonNull field CpuCore$PCWithDisplacementOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2239: error: [NullAway] @NonNull field CpuCore$PCWithIndexOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2243: error: [NullAway] @NonNull field CpuCore$PCWithIndexOperand.idxSize not initialized
		protected Size idxSize;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2369: error: [NullAway] @NonNull field CpuCore$ImmediateOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2467: error: [NullAway] @NonNull field CpuCore$StatusRegisterOperand.size not initialized
		protected Size size;
		               ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2469: error: [NullAway] @NonNull field CpuCore$StatusRegisterOperand.name not initialized
		protected String name;
		                 ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:33: error: [NullAway] @NonNull field bus not initialized
	AddressSpace bus;
	             ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:34: error: [NullAway] @NonNull field cpu not initialized
	Cpu cpu;
	    ^
    (see http://t.uber.com/nullaway )
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields reader (line 43), writer (line 44) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Monitor(Cpu cpu, AddressSpace memory)
	       ^
    (see http://t.uber.com/nullaway )
Note: ../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
28 errors
